Fixed topic card left positioning on mobile.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7869,15 +7869,16 @@ a[href*="http"] .article-header__date {
 .topics-list__topics.slick-slider {
   clear: both;
   padding-top: 40px;
-  padding-left: 40px;
   position: initial;
   margin-bottom: 0;
   margin-top: 0;
   overflow: hidden;
-  display: block; }
+  display: block;
+  padding-left: 40px; }
   @media (max-width: 599px) {
     .topics-list__topics.slick-slider {
-      padding-top: 20px; } }
+      padding-top: 20px;
+      padding-left: 0; } }
   .topics-list__topics.slick-slider:hover {
  }
   .topics-list__topics.slick-slider button {
