--- a/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-topic-tag-featured-carousel.scss
@@ -88,22 +88,23 @@
 .topics-list__topics.slick-slider {
   clear: both;
   padding-top: $space-five;
-
-  @include breakpoint($new-x-small-max) {
-    padding-top: 20px;
-  }
-
-  padding-left: $space-five;
   position: initial;
+  margin-bottom: 0;
+  margin-top: 0;
+  overflow: hidden;
+  display: block;
+  padding-left: $space-five;
+  //border: solid 2px #ff00b8;
   //width: 1360px;
   //grid-column: 1/-1;
   //grid-row: 1/-1;
   //margin: 0 auto 20px;
-  margin-bottom: 0;
-  margin-top: 0;
-  overflow: hidden;
-  //border: solid 2px #ff00b8;
-  display: block;
+
+  @include breakpoint($new-x-small-max) {
+    padding-top: 20px;
+    padding-left: 0;
+  }
+
   @include slick-buttons;
 
   .slick-slide {
